# LLVM_Obfuscation_Pass

./: README.md
hello_world_example/: CMakeLists.txt
hello_world_example/inputs/: input_for_hello.ll
hello_world_example/output/: output.txt
transformation_pass/: CMakeLists.txt  IR_Transformation.cpp
transformation_pass/inputs/: test.c  test.ll
transformation_pass/output/: output.ll
transformation_pass_improved/: CMakeLists.txt  IR_Transformation_Improved.cpp
transformation_pass_improved/inputs/: test.c  test.ll
transformation_pass_improved/output/: output_conditional.ll  output_unconditional.ll
transformation_pass_improved/tests/: .lit_test_times.txt  lit.cfg  run_tests.sh  split_BB_test.ll
transformation_pass_improved/tests/Output/: lit_output.txt
